# ai-chat-guardrails

./: .env.example  .env.local.example  .env.remote.example  README.md  main.py  pyproject.toml
chatbot/: config.py  engine.py
chatbot/backends/: __init__.py  local.py  remote.py
chatbot/guardrails/: input_guard.py  output_guard.py
docs/: test_cases.md
prompts/: judge.txt  system.txt
tests/: test_engine.py
